<resources>
    <string name="app_name">Music Taste</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">Don\'t you have an account? Sign Up</string>
    <string name="Setting">Setting</string>
    <string name="SignOut">Sign Out</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="AccountImage">Account Image</string>
    <string name="EmptyField">The fields can\'t be empty</string>
    <string name="PasLength">The password must be at least 6 characters long</string>
    <string name="AutFail">Authentication failed</string>
    <string name="AutSucc">Authentication was a success</string>
    <string name="EmailNotValid">The email written is not valid</string>

    <string name="Username" translatable="false">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">home</string>
    <string name="title_search">search</string>
    <string name="title_account">account</string>
    <string name="Search">Search</string>
    <string name="Description">No description available</string>
    <string name="Youtube">Listen the song on YouTube</string>
    <string name="YoutubeError">Video not available</string>
    <string name="SpotifyError">Song not available</string>
    <string name="Registration">Sign Up</string>
    <string name="dislikedSong">Removed from liked songs</string>
    <string name="likedSong">Added to liked songs</string>
    <string name="listen">Listen On:</string>
    <string name="FavoritesSongs">Favorite songs</string>
    <string name="EmptySong">No favorite song</string>
    <string name="FavoriteArtists">Favorite artists</string>
    <string name="EmptyArtist">No favorite artist</string>
    <string name="FavoriteAlbums">Favorite albums</string>
    <string name="EmptyAlbum">No favorite album</string>
    <string name="MusicTaste">Here\'s your music taste</string>
    <string name="likedArtist">Added to liked artists</string>
    <string name="DislikedArtists">Removed from liked artists</string>
    <string name="Welcome">Welcome back,</string>
    <string name="Discography">Discography</string>
    <string name="FavoriteAlbum">Added to favorite albums</string>
    <string name="DislikedAlbum">Removed from liked albums</string>
    <string name="Tracklist" translatable="false">Tracklist</string>
</resources>