<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    tools:context=".AccountActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAccount"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/AccountImage"
        android:src="@drawable/unnamed"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/txtSurname"
        android:layout_width="91dp"
        android:layout_height="63dp"
        android:text="@string/Surname"
        android:textColor="@color/LightGray"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:text="@string/Name"
        android:textColor="@color/LightGray"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <ImageButton
        android:id="@+id/btnControl"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:contentDescription="@string/Setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@android:drawable/ic_menu_manage" />

</androidx.constraintlayout.widget.ConstraintLayout>