<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.AccountFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAccount"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/AccountImage"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092" />

        <TextView
            android:id="@+id/txtSurname"
            android:layout_width="91dp"
            android:layout_height="63dp"
            android:text="@string/Surname"
            android:textColor="@color/LightGray"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.612"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.088" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="61dp"
            android:layout_height="53dp"
            android:text="@string/Name"
            android:textColor="@color/LightGray"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087" />

        <ImageButton
            android:id="@+id/btnControl"
            android:layout_width="36dp"
            android:layout_height="30dp"
            android:contentDescription="@string/Setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/MiddleDarkGray"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFavoriteSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/FavoritesSongs"
                    android:textAlignment="gravity"
                    android:textColor="@color/TextGray"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmptySong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="120dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/EmptySong"
                    android:textAlignment="gravity"
                    android:textColor="@color/TextGray"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/liked_songs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>