<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnRegSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:text="@string/Registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
            app:layout_constraintVertical_bias="0.397" />

        <EditText
            android:id="@+id/etRegName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/Username"
            android:importantForAutofill="no"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/TextGray"
            android:textColorHint="@color/LightGray"
            app:layout_constraintBottom_toTopOf="@+id/etRegEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.688" />

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/TextGray"
            android:textColorHint="@color/LightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/TextGray"
            android:textColorHint="@color/LightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
            app:layout_constraintVertical_bias="0.253" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>